<resources>
    <string name="app_name">KKS-Mein Plan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="switch_title">Auto Login</string>
    <string name="switch2_title">Benachrichtigungen</string>
    <string name="auto_login">Auto Login</string>
    <string name="benachrichtigungen">Benachrichtigungen</string>
    <string name="ags">AGs</string>
    <string name="ank_ndigungen">Ankündigungen</string>
    <string name="stundenplan">Stundenplan</string>
    <string name="vertretungsplan">Vertretungsplan</string>
    <string name="konto">Konto</string>
    <string name="logout">Logout</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>
