<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vertretungsplan"
            android:icon="@drawable/ic_vertretungsplan"
            android:title="@string/vertretungsplan" />

        <item
            android:id="@+id/nav_stundenplan"
            android:icon="@drawable/ic_stundenplan"
            android:title="@string/stundenplan" />

        <item
            android:id="@+id/nav_ankuendigungen"
            android:icon="@drawable/ic_ankuendigungen"
            android:title="@string/ank_ndigungen" />

        <item
            android:id="@+id/nav_ags"
            android:icon="@drawable/ic_ags"
            android:title="@string/ags" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_einstellungen"
            android:icon="@drawable/ic_einstellungen"
            android:title="@string/einstellungen" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            android:checkable="false"/>
    </group>

</menu>